Fix issue with audio input streams where an error would not be reported if an initialization error occurs while creating an audio stream.

BUG=678697
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2611063003
Cr-Commit-Position: refs/heads/master@{#441758}

Former-commit-id: c57d9c242d1be6076c12838c4fc91a081b887c01